--- a/next-crash-course/components/layout/MainNavigation.module.css
+++ b/next-crash-course/components/layout/MainNavigation.module.css
@@ -4,7 +4,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #77002e;
+  /* background-color: #77002e; */
+  background-color: black;
+  position: sticky;
+  top: 0;
   padding: 0 10%;
 }
 
@@ -32,8 +35,6 @@
   color: #fcb8d2;
 }
 
-.header a:hover,
-.header a:active,
-.header a.active {
+.header a:hover, .header a:active, .header a.active {
   color: white;
 }
