--- a/react-course-full/src/App.css
+++ b/react-course-full/src/App.css
@@ -3,3 +3,24 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.backdrop {
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+}
+
+.modal {
+  width: 400px;
+  height: 250px;
+  background-color: #fff;
+  position: relative;
+  z-index: 10;
+  left: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 10px;
+}
