--- a/fb-clone/styles/globals.css
+++ b/fb-clone/styles/globals.css
@@ -6,3 +6,10 @@
         @apply hidden p-2 h-10 w-10 bg-gray-200 rounded-full cursor-pointer text-gray-500
     }
 }
+
+* ::-webkit-scrollbar {
+    display: none;
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+}
